--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <script type="module" src="/assets/index.js"></script>
-    <title>React App</title>
+    <title>Maxlou</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
