--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Maxlou</title>
+    <link rel="stylesheet" href="app.e32f947e.css">
+    <script type="module" src="app.16741518.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
